--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Converter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="input.js"></script>
-    <script src="save_dxf.js"></script>
+    <script src="./dist/bundle.js"></script>
 </head>
 <body>
 
