change input form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <button id="save_dxf">Save DXF</button>
-    <button id="add_layer">Add LAYER</button>
+    <div style="text-align: center;">Elements on layer: <input type='text' id='count' value='5' size=7><button id="add_layer">Add LAYER</button></div>
 
     <div class="container">
 
