add comments and styles

--- a/index.html
+++ b/index.html
@@ -10,48 +10,20 @@
 </head>
 <body>
 
-    <button id="save_dxf">Save DXF</button>
-    <div style="text-align: center;">Elements on layer: <input type='text' id='count' value='5' size=7><button id="add_layer">Add LAYER</button></div>
+    <div style="text-align: center;">
+        Δ<i>Z&nbsp;=&nbsp;</i><input type='text' id='deltaZ' value='5' size=7>mm&nbsp;
+        <button id="save_dxf">
+            Save DXF
+        </button>
+    </div>
+    <div style="text-align: center;">
+        Elements on layer: <input type='text' id='count' value='5' size=7>
+        <button id="add_layer">
+            Add LAYER
+        </button>
+    </div>
 
     <div class="container">
-
-        <!-- <div class="layer">
-            <div class="layer_column">
-                <div class="l_col_name">L</div>
-                <input>
-                <input>
-                <input>
-                <input>
-                <input>
-            </div>
-            <div class="layer_column">
-                <div class="l_col_name">A</div>
-                <input>
-                <input>
-                <input>
-                <input>
-                <input>
-            </div>
-            <div class="layer_column">
-                <div class="l_col_name">R</div>
-                <input>
-                <input>
-                <input>
-                <input>
-                <input>
-            </div>
-            <div class="layer_column">
-                <div class="l_col_name">irpx</div>
-                <input>
-                <div class="l_col_name">irpy</div>
-                <input>
-                <div class="l_col_name">irpB</div>
-                <input>
-                <div class="l_col_name">layer</div>
-                <input class='layer_name_input'>
-            </div>
-        </div> -->
-
     </div>
 </body>
 </html>
